# good-rust-server-arch

./: .env.example  Cargo.toml  README.md  validate_all.sh
.github/workflows/: ci.yml
crates/orders-app/: Cargo.toml  README.md
crates/orders-app/examples/: client_example.rs
crates/orders-app/src/: main.rs
crates/orders-app/tests/: repo_build.rs
crates/orders-client/: Cargo.toml  README.md
crates/orders-client/src/: lib.rs
crates/orders-hex/: Cargo.toml
crates/orders-hex/src/: config.rs  errors.rs  lib.rs
crates/orders-hex/src/application/: order_service.rs
crates/orders-hex/src/inbound/http/: mod.rs  server.rs
crates/orders-hex/tests/: http_integration.rs  service_flow.rs
crates/orders-repo/: Cargo.toml
crates/orders-repo/migrations/: 0001_create_orders.sql
crates/orders-repo/src/: lib.rs  memory.rs  sqlite.rs
crates/orders-repo/tests/: memory_repo.rs  sqlite_repo.rs
crates/orders-types/: Cargo.toml
crates/orders-types/src/domain/: order.rs
crates/orders-types/src/ports/: order_repository.rs
