[package]
name = "orders-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
memory = ["orders-repo/memory"]
sqlite = ["orders-repo/sqlite"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
orders-hex = { workspace = true }
orders-repo = { workspace = true, default-features = false }
dotenvy = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
orders-types = { workspace = true }
orders-client = { workspace = true }
