[package]
name = "orders-repo"
version = "0.1.0"
edition = "2021"

[features]
memory = ["dashmap"]
sqlite = ["sqlx/sqlite"]
default = ["memory"]

[dependencies]
orders-types = { workspace = true}
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
